<resources>
    <!--=====[ General | Start ]=====-->
    <string name="app_name">Poste</string>
    <string name="action_settings">Settings</string>
    <string name="internal_error">An internal error occurred</string>
    <string name="unknown_error">An unknown error occurred</string>
    <!--=====[ General | End ]=====-->

    <!--=====[ Account | Start ]=====-->
    <string name="password_change_success">Password changed successfully</string>
    <string name="password_change_failure">Password change failed, unknown error</string>
    <string name="edit_failure">Edit failed, unknown error</string>
    <!--=====[ Account | End ]=====-->

    <!--=====[ Dashboard | Start ]=====-->
    <string name="retrieve_error">Unable to retrieve folders and posts, please try again.</string>
    <string name="folder_creation_success">Folder created!</string>
    <string name="folder_creation_failed">Folder creation failed.</string>
    <string name="folder_delete_success">Folder deleted successful.</string>
    <string name="folder_delete_failed_message">Folder deletion failed: </string>
    <string name="folder_delete_failed">Folder deletion failed.</string>
    <!--=====[ Dashboard | End ]=====-->

    <!--=====[ EditFolder | Start ]=====-->
    <string name="edit_folder_success">Edit folder successful!</string>
    <!--=====[ EditFolder | End ]=====-->

    <!--=====[ FolderUser | Start ]=====-->
    <string name="unshared_folder_user">Unshared folder with </string>
    <!--=====[ FolderUser | End ]=====-->

    <!--=====[ EditPost | Start ]=====-->
    <string name="edit_post_success">Edit post successful!</string>
    <!--=====[ EditPost | End ]=====-->

    <!--=====[ Register | Start ]=====-->
    <string name="register_success">Successfully registered your account.</string>
    <string name="register_email_in_use">The provided email is already in use.</string>
    <string name="register_failed">Registration failed.</string>
    <!--=====[ Register | End ]=====-->

    <!--=====[ Search | Start ]=====-->
    <string name="select_search_field">Select a field to search post!</string>
    <string name="search_field_empty">Search field cannot be empty.</string>
    <!--=====[ Search | End ]=====-->

    <!--=====[ SharedFolder | Start ]=====-->
    <string name="share_folder_success">Share folder successful!</string>
    <!--=====[ SharedFolder | End ]=====-->

    <!--=====[ Login | Start ]=====-->
    <string name="login_successful">Login successful!</string>
    <string name="login_invalid_credentials">Invalid username or password.</string>
    <string name="login_failed">Login failed due to error.</string>
    <string name="enter_email">   Enter your email</string>
    <string name="enter_password">   Enter your password</string>
    <string name="login_button">Login</string>
    <string name="remember_me">Remember me</string>
    <!--=====[ Login | End ]=====-->

    <!--=====[ FolderView | Start ]=====-->
    <string name="folder_retrieve_error">Unable to retrieve folders and posts, please try again.</string>
    <!--=====[ FolderView | End ]=====-->

    <!--=====[ Search | Start ]=====-->
    <string-array name="spinner_items">
        <item>-- Select a field --</item>
        <item>Link</item>
        <item>Title</item>
        <item>Description</item>
        <item>Tag</item>
    </string-array>
    <!--=====[ Search | End ]=====-->

    <!--=====[ Shared Folder | Start ]=====-->
    <string name="shared_folder_share_success">Folder access update successful</string>
    <string name="Edit_shared_failed">Edit failed, unknown error.</string>
    <!--=====[ Shared Folder | End ]=====-->

    <!--=====[ ValidationUtils | Start ]=====-->
    <string name="enter_first_name">Please enter your first name!</string>
    <string name="enter_last_name">Please enter your last name!</string>
    <string name="error_first_name_length">First name must be at most 32 characters!</string>
    <string name="error_last_name_length">Last name must be at most 32 characters!</string>
    <string name="invalid_email">Please enter a valid email!</string>
    <string name="password_mismatch">Passwords do not match!</string>
    <string name="error_password_short">Password must be at least 8 characters!</string>
    <string name="error_password_long">Password must be at most 32 characters!</string>
    <!--=====[ ValidationUtils | End ]=====-->

    <!--=====[ NewPost | Start ]=====-->
    <string name="folder_selection">-- Select a Folder --</string>
    <string name="error_no_folder_selected">Select a folder to save post!</string>
    <string name="post_creation_success">Created post!</string>
    <string name="post_creation_failed">Failed to create post.</string>
    <!--=====[ NewPost | End ]=====-->

    <!--=====[ Words | Start ]=====-->
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="folder">Folder<font color="red">*</font></string>
    <string name="folder_create">Folder</string>
    <string name="folder_name">Folder Name</string>
    <string name="name">Name</string>
    <string name="new_folder">Create Folder</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="share_folder">Share Folder</string>
    <string name="error_message">Error: </string>
    <string name="name_field">Name</string>
    <string name="title">Title<font color="red">*</font></string>
    <string name="tags">Tags</string>
    <string name="description">Description<font color="red">*</font></string>
    <string name="login">Login</string>
    <string name="options">Options</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="go">Go!</string>
    <string name="post">Post</string>
    <string name="todo">TODO</string>
    <!--=====[ Words | End ]=====-->

    <!--=====[ Misc | Start ]=====-->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="poste_logo_description">Poste Logo</string>
    <string name="title_activity_twitter_token">TwitterToken</string>
    <string name="edit_post_icon">edit post icon</string>
    <string name="post_icon">post icon</string>
    <string name="folder_icon">folder icon</string>
    <string name="post_deleted">Post deleted</string>
    <string name="text_view">folderNameText</string>
    <string name="click_here">Click here!</string>
    <string name="folder_view_text">TextView</string>
    <string name="edit_access">Edit Access</string>
    <string name="user_name">User Name</string>
    <string name="communication_error">Unable to communicate with server</string>
    <string name="required_info">Fields with <font color="red">*</font> are required</string>
    <string name="required_all">All fields are required</string>
    <!--=====[ Misc | End ]=====-->

    <string-array name="spinner_values">
        <item>View Access</item>
        <item>Edit Access</item>
        <item>Full Access</item>
    </string-array>

    <!--=====[ layouts | Start ]=====-->
    <!--=====[ account | Start ]=====-->
    <string name="enter_current_password">Enter Current Password:</string>
    <string name="current_password">Current Password</string>
    <string name="new_password_field">New Password:</string>
    <string name="new_password_hint">New Password</string>
    <string name="new_password_confirm_text">Confirm New Password:</string>
    <string name="new_password_confirm_hint">Confirm Password</string>
    <!--=====[ account | End ]=====-->

    <!--=====[ edit_folder | Start ]=====-->
    <string name="edit_folder_text">Edit Folder</string>
    <string name="save_changes_text">Save Changes</string>
    <string name="cancel_changes_text">Cancel Changes</string>
    <!--=====[ edit_folder | End ]=====-->

    <!--=====[ edit_post | Start ]=====-->
    <string name="edit_post_text">Edit Post</string>
    <string name="link_text">Link to post<font color="red">*</font></string>
    <string name="save_post_text">Save Post</string>
    <string name="cancel_post_text">Cancel Post</string>
    <!--=====[ edit_post | End ]=====-->

    <!--=====[ folder_view | Start ]=====-->
    <string name="folder_name_text">folderNameText</string>
    <string name="empty_folder">Folder Empty</string>
    <!--=====[ folder_view | End ]=====-->

    <!--=====[ intro | Start ]=====-->
    <string name="create_account">Create Account</string>
    <!--=====[ intro | End ]=====-->

    <!--=====[ login | Start ]=====-->
    <string name="no_account">Don\'t have an account?</string>
    <!--=====[ login | End ]=====-->

    <!--=====[ new_post | Start ]=====-->
    <string name="new_post">Create New Post</string>
    <!--=====[ new_post | End ]=====-->

    <!--=====[ options | Start ]=====-->
    <string name="account_settings">Account Settings</string>
    <string name="signout">Sign-out</string>
    <!--=====[ options | End ]=====-->

    <!--=====[ requester | Start ]=====-->
    <string name="email_address_hint">Email Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <!--=====[ requester | End ]=====-->

    <!--=====[ search | Start ]=====-->
    <string name="search_title">Search Activity Title</string>
    <string name="search_by">Search by</string>
    <string name="search_empty">Search result empty!</string>
    <!--=====[ search | End ]=====-->

    <!--=====[ shared_folder | Start ]=====-->
    <string name="email_field">Email</string>
    <string name="Shared_Permissions">Share Permissions</string>
    <!--=====[ shared_folder | End ]=====-->

    <!--=====[ dialog_create_post | Start ]=====-->
    <string name="item_name">Item Name</string>
    <string name="item_link">Item Link</string>
    <string name="empty_dashboard_hint">Add a Folder to get started!</string>
    <!--=====[ dialog_create_post | End ]=====-->
    <!--=====[ layouts | End ]=====-->
</resources>