<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="200px"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="125px"
        android:background="@color/topbar_color"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewLogoP"
        android:layout_width="95dp"
        android:layout_height="114dp"
        android:contentDescription="@string/poste_logo_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/newlogo_p_noback" />

    <ImageView
        android:id="@+id/imageViewEditPostIcon"
        android:layout_width="86dp"
        android:layout_height="81dp"
        android:contentDescription="@string/edit_post_icon"
        app:layout_constraintStart_toEndOf="@+id/imageViewLogoP"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:srcCompat="@drawable/edit_post_icon" />

    <TextView
        android:id="@+id/textViewEditPostTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/new_post"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageViewEditPostIcon"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textViewEditPostUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_text"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editTextPostLink"
        app:layout_constraintTop_toBottomOf="@+id/imageViewEditPostIcon" />

    <EditText
        android:id="@+id/editTextPostLink"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:background="@drawable/edittext_rounded_gray"
        android:inputType="text"
        android:paddingStart="12dp"

        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEditPostUrl"
        app:layout_constraintWidth_percent="0.9" />

    <TextView
        android:id="@+id/textViewPostTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/title"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewEditPostUrl"
        app:layout_constraintTop_toBottomOf="@+id/editTextPostLink" />

    <EditText
        android:id="@+id/editTextPostTitle"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:background="@drawable/edittext_rounded_gray"
        android:inputType="text"
        android:paddingStart="12dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPostTitle"
        app:layout_constraintWidth_percent="0.9" />


    <TextView
        android:id="@+id/textViewPostTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tags"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewEditPostUrl"
        app:layout_constraintTop_toBottomOf="@+id/chooseFolderSpinner" />


    <EditText
        android:id="@+id/editTextPostTags"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:background="@drawable/edittext_rounded_gray"
        android:inputType="text"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPostTag"
        app:layout_constraintWidth_percent="0.9" />

    <TextView
        android:id="@+id/textViewPostDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/description"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewEditPostUrl"
        app:layout_constraintTop_toBottomOf="@+id/editTextPostTitle" />

    <EditText
        android:id="@+id/editTextPostDescription"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:background="@drawable/edittext_rounded_gray"
        android:inputType="text"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPostDescription"
        app:layout_constraintWidth_percent="0.9" />

    <TextView
        android:id="@+id/textViewFolderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/folder"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewEditPostUrl"
        app:layout_constraintTop_toBottomOf="@+id/editTextPostDescription" />

    <Spinner
        android:id="@+id/chooseFolderSpinner"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:background="@drawable/edittext_rounded_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFolderName"
        app:layout_constraintWidth_percent="0.9" />

    <Button
        android:id="@+id/buttonSaveChanges"
        style="@style/RedButton"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="50dp"
        android:text="@string/save_post_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPostTags"
        app:layout_constraintWidth_percent="0.6" />

    <Button
        android:id="@+id/buttonCancelChanges"
        style="@style/GrayButton"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="10dp"
        android:text="@string/cancel_post_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSaveChanges"
        app:layout_constraintWidth_percent="0.6" />


</androidx.constraintlayout.widget.ConstraintLayout>