<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OptionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/AccountLogo"
            android:layout_width="270dp"
            android:layout_height="98dp"
            android:layout_marginTop="4dp"
            app:srcCompat="@drawable/new_logo_poste_removebg" />

        <TextView
            android:id="@+id/Titletxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/options"
            android:textSize="38sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="10dp" >

            <Button
                android:id="@+id/options_accounts_btn"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                style="@style/RedButton"
                android:text="@string/account_settings" />

            <Button
                android:id="@+id/Signoutbtn"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                style="@style/RedButton"
                android:text="@string/signout" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>