<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SearchActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/topbar_color"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/searchActivityTitle"
                android:layout_width="186dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:contentDescription="@string/search_title"
                android:text="@string/search"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/accountLogo2"
            android:layout_width="95dp"
            android:layout_height="114dp"
            android:background="#00430000"
            android:contentDescription="@string/poste_logo_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/newlogo_p_noback" />

        <Spinner
            android:id="@+id/chooseFieldSpinner"
            android:layout_height="46dp"
            android:layout_width="0dp"
            android:background="@drawable/edittext_rounded_gray"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toEndOf="@+id/accountLogo2"
            app:layout_constraintTop_toBottomOf="@id/linearLayout4"
            app:layout_constraintVertical_bias=".5"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline70"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />

        <EditText
            android:id="@+id/editTextSearchBy"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:background="@drawable/edittext_rounded_gray"
            android:hint="@string/search_by"
            android:inputType="text"
            android:paddingStart="12dp"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline70"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/search_go_button"
            style="@style/RedButton"
            android:layout_width="0dp"
            android:layout_height="46dp"
            app:layout_constraintStart_toEndOf="@id/guideline70"
            android:layout_marginLeft="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="15dp"
            android:text="@string/go" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/searchViewEmptyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/search_empty"
        android:textAlignment="center"
        android:textColor="#3B3B3B"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/posts_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:listitem="@layout/recycler_view_item" />
</androidx.constraintlayout.widget.ConstraintLayout>