<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditFolderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/accountLogo2"
            android:layout_width="135dp"
            android:layout_height="49dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="90dp"
            android:layout_weight="1"
            android:contentDescription="@string/poste_logo_description"
            app:srcCompat="@drawable/poste_logo_inpixio" />

        <Button
            android:id="@+id/dashboard_add_folder_btn"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="0dp"
            android:layout_weight="1"
            android:backgroundTint="#B0BC2C2C"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:textAlignment="center"
            app:icon="@android:drawable/ic_input_add"
            app:iconPadding="0dp" />

        <ImageView
            android:id="@+id/Optionsbtn"
            android:layout_width="36dp"
            android:layout_height="46dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:minWidth="50dp"
            app:srcCompat="@drawable/options" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:text="Edit Folder"
            android:textSize="48sp" />

        <EditText
            android:id="@+id/edit_folder_folder_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/edit_folder_cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/edit_folder_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#B0BC2C2C"
                android:textColor="@color/white"
                android:text="@string/save"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>